# csvscope

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: generate_sample.py
src/csvscope/: __init__.py  cli.py  profiler.py  quality.py  report.py
tests/: test_profiler.py  test_quality.py  test_report.py
