[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csvscope"
version = "0.1.0"
description = "Automated data profiling and quality reporting for CSV files, as a single HTML report."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vaibhav Miryala" }]
keywords = ["data", "profiling", "data-quality", "eda", "pandas", "csv", "report"]
dependencies = ["pandas>=1.3", "numpy>=1.21", "matplotlib>=3.4"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
csvscope = "csvscope.cli:main"

[project.urls]
Homepage = "https://github.com/GoodVaibhs/csvscope"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
